# nzbdav-rs

./: .gitignore  .woodpecker.yml  Cargo.toml  Dockerfile  README.md  TEST_STACK.md  docker-compose.test.yml  docker-compose.yml
.cargo/: config.toml
crates/nzbdav-app/: Cargo.toml
crates/nzbdav-app/src/: auth.rs  cli.rs  frontend.rs  log_capture.rs  main.rs  queue_manager.rs  server_api.rs  settings_api.rs  state.rs  status_broadcaster.rs  websocket.rs
crates/nzbdav-app/src/sab_api/: handler.rs  mod.rs  models.rs  router.rs
crates/nzbdav-arr/: Cargo.toml
crates/nzbdav-arr/src/: arr_client.rs  arr_monitoring.rs  error.rs  health_check.rs  lib.rs  rclone.rs
crates/nzbdav-core/: Cargo.toml
crates/nzbdav-core/src/: blob_store.rs  config.rs  database.rs  dav_items.rs  db.rs  error.rs  history_items.rs  lib.rs  models.rs  queue_items.rs  seed.rs  sqlite_db.rs  util.rs
crates/nzbdav-dav/: Cargo.toml
crates/nzbdav-dav/src/: error.rs  handler.rs  lib.rs  propfind.rs  range.rs  router.rs  store.rs
crates/nzbdav-dav/tests/: handler_tests.rs  range_tests.rs
crates/nzbdav-dav/tests/common/: mod.rs
crates/nzbdav-pipeline/: Cargo.toml
crates/nzbdav-pipeline/src/: error.rs  lib.rs  queue_item_processor.rs  types.rs
crates/nzbdav-pipeline/src/aggregators/: file_aggregator.rs  mod.rs  rar_aggregator.rs
crates/nzbdav-pipeline/src/deobfuscation/: fetch_first_segments.rs  get_file_infos.rs  get_par2_file_descriptors.rs  mod.rs
crates/nzbdav-pipeline/src/post_processors/: blocklisted_files.rs  create_strm_files.rs  ensure_importable_video.rs  mod.rs  rename_duplicates.rs
crates/nzbdav-pipeline/src/processors/: file_processor.rs  mod.rs  rar_processor.rs
crates/nzbdav-rar/: Cargo.toml
crates/nzbdav-rar/src/: crypto.rs  error.rs  header.rs  lib.rs  parser.rs  rar4.rs  rar5.rs
crates/nzbdav-stream/: Cargo.toml
crates/nzbdav-stream/src/: aes_decoder_stream.rs  error.rs  lib.rs  multi_segment_stream.rs  multipart_file_stream.rs  nzb_file_stream.rs  prioritized_semaphore.rs  provider.rs  seekable_segment_stream.rs  testing.rs
