[package]
name = "nzbdav-app"
version.workspace = true
edition.workspace = true

[dependencies]
nzbdav-core = { workspace = true }
nzb-core = { workspace = true }
nzbdav-dav = { workspace = true }
nzbdav-stream = { workspace = true }
nzbdav-pipeline = { workspace = true }
nzbdav-arr = { workspace = true }
nzb-nntp = { workspace = true }
axum = { workspace = true, features = ["multipart", "ws"] }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
rustls = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
rust-embed = "8"
mime_guess = "2"
percent-encoding = "2"

[lints]
workspace = true
