[package]
name = "nzbdav-arr"
version.workspace = true
edition.workspace = true

[dependencies]
nzbdav-core = { workspace = true, features = ["sqlite"] }
nzbdav-stream = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }
rusqlite = { workspace = true }

[lints]
workspace = true
