[package]
name = "nzbdav-core"
version.workspace = true
edition.workspace = true

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite", "dep:parking_lot"]

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
md-5 = { workspace = true }

# SQLite-only deps
rusqlite = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

# Needed by sqlite_db for spawn_blocking
tokio = { workspace = true }

# Only needed by SQLite modules, not the trait
nzb-core = { workspace = true }

[lints]
workspace = true
