[package]
name = "nzbdav-dav"
version.workspace = true
edition.workspace = true

[dependencies]
nzbdav-core = { workspace = true }
nzbdav-stream = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
parking_lot = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2"
percent-encoding = "2"

[lints]
workspace = true
