[package]
name = "nzbdav-rar"
version.workspace = true
edition.workspace = true

[dependencies]
crc32fast = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
pbkdf2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
hex = { workspace = true }

[lints]
workspace = true
